--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>About</h2>
-        <p>Hi! I'm Jonathan, a Computer Science student at Padjadjaran University passionate about Machine Learning and Data Science. I enjoy analyzing data to uncover insights and building models that solve real-world problems. Skilled in Python and data processing, I’m eager to keep learning and applying the latest AI techniques.</p>
+        <p>Hi! I'm Jonathan, a Informatics Engineering student at Padjadjaran University passionate about Machine Learning and Data Science. I enjoy analyzing data to uncover insights and building models that solve real-world problems. Skilled in Python and data processing, I’m eager to keep learning and applying the latest AI techniques.</p>
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
@@ -222,7 +222,7 @@
 
             <div class="resume-item pb-0">
               <h4>Jonathan Nugroho Adhi Wicaksono</h4>
-              <p><em>Computer Science undergraduate in 6th semester at Padjadjaran University, passionate about Machine Learning and Data Science, with a strong interest in turning data into actionable insights and intelligent systems.</em></p>
+              <p><em>Informatics Engineering undergraduate in 6th semester at Padjadjaran University, passionate about Machine Learning and Data Science, with a strong interest in turning data into actionable insights and intelligent systems.</em></p>
               <ul>
                 <li>Sumedang, Indonesia</li>
                 <li>+6285741028454</li>
@@ -232,7 +232,7 @@
 
             <h3 class="resume-title">Education</h3>
             <div class="resume-item">
-              <h4>Computer Science, Universitas Padjadjaran</h4>
+              <h4>Informatics Engineering, Universitas Padjadjaran</h4>
               <h5>2022 - 2026</h5>
               <p><em>Relevant Courses: Machine Learning, Artificial Intelligence, Data Warehouse, Software Engineering.</em></p>
             </div><!-- Edn Resume Item -->
